# SOC-26-American-Put-Option-Pricing

./: README.md
Week5_AayushGupta/Part A/: Week5_PartA.Linear Regression.py
Week5_AayushGupta/Part B/: Week5_PartB.py
american-option-capstone/: README.md  pyproject.toml  requirements.txt
american-option-capstone/notebooks/: exploration.ipynb
american-option-capstone/reports/: Week9_AayushGupta.md
american-option-capstone/reports/results/: bucket_volatility.csv  dqn_online.pt  neural_pricer.pt  rl_grid_bucket_moneyness.csv  rl_policy_grid_comparison.csv  summary.txt
american-option-capstone/src/data/: synthetic_contracts.py
american-option-capstone/src/evaluation/: comparison.py  metrics.py  plots.py
american-option-capstone/src/ml/: evaluate_nn.py  models.py  train_nn.py
american-option-capstone/src/pricing/: binomial.py  black_scholes.py  payoffs.py
american-option-capstone/src/rl/: env.py  evaluate_policy.py  train_dqn.py
american-option-capstone/tests/: test_binomial.py  test_payoffs.py  test_rl_env.py
week4_AayushGupta/: README.md  test_american_put.py  week4_report.py
week6/: PartA.py  PartB.py  PartC.py  README.md  american_put.py  report.md
week7_AayushGupta/: README.md  part_a_mdp.py  part_b_environment.py  part_c_policy_comparison.py
week8_AayushGupta/: README.md  week8.py
week9_capstone_deliverables/reports/: Week9_AayushGupta.md  Week9_AayushGupta_draft.md
week9_capstone_deliverables/week6/: week6_option_data.npz
week9_capstone_deliverables/week8_AayushGupta/: week8.py
(+15 files in other folders)
